improved style of the home page

--- a/flask/.gitignore
+++ b/flask/.gitignore
@@ -8,3 +8,7 @@ website/static/images
 # files
 website/database.db
 test.py
+bootstrap.min.js
+jquery-3.2.1.slim.min.js
+popper.min.js
+socket.io.js
