--- a/flask/.gitignore
+++ b/flask/.gitignore
@@ -3,7 +3,7 @@ venv
 .vscode
 website/__pycache__
 db_credentials
-website/static/images
+website/static/images/profile
 
 # files
 website/database.db
